--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,8 @@
   </head>
   <body>
     <iframe src="/cards/default" name="card_frame"></iframe>
+    <div id="preview"></div>
+    <button onclick="sendToken()">Get token</button>
+    <script src="/public/demo.js"></script>
   </body>
 </html>
