refactored autotab && validations

--- a/projects/default/card.html
+++ b/projects/default/card.html
@@ -1,6 +1,8 @@
 <form class="card-form" data-tokenizer-element="form">
   <div class="card-form-row card-form-row-pan">
-    <input data-tokenizer-element="pan" placeholder="XXXX XXXX XXXX XXXX"/>
+    <div>
+      <input data-tokenizer-element="pan" placeholder="XXXX XXXX XXXX XXXX"/>
+    </div>
     <div data-tokenizer-error="pan" class="error"></div>
   </div>
   <div class="card-form-row">
@@ -14,7 +16,9 @@
       <div data-tokenizer-error="expDate" class="error"></div>
     </div>
     <div class="card-form-cvv">
-      <input data-tokenizer-element="cvv" placeholder="CVV" />
+      <div>
+        <input data-tokenizer-element="cvv" placeholder="CVV" />
+      </div>
       <div data-tokenizer-error="cvv" class="error"></div>
     </div>
   </div>
