added card suggestions and fixed style of mbill card to avoid vertical resizing

--- a/projects/mbill/card.html
+++ b/projects/mbill/card.html
@@ -1,8 +1,8 @@
 <div class="card" >
     <div class="card__row" data-tokenizer-error-wrap="pan">
         <label for="card_numb" class="label"><%= t('numberTitle') %></label>
+        <div class="card__type" data-tokenizer-card-type></div>
         <input placeholder="____ ____ ____ ____"  data-tokenizer-element="pan" />
-        <!-- <div class="card__type"><i></i></div> -->
     </div>
     <div class="card__error" data-tokenizer-error="pan"></div>
     <div class="card__row">
